--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="navbar"> 
-        <!-- <div id="upper">
+        <div id="upper">
             <div id="left">
                 <i class="fa fa-map-marker" aria-hidden="true">STORE & SPA LOCATOR</i>
             </div>
@@ -30,12 +30,12 @@
 
             </div>
 
-        </div> -->
+        </div> 
 
         <!-- upper part ends here -->
 
         <!-- middle part starts here -->
-        <!-- <div id="middle">
+         <div id="middle"> 
             <ul>
                 <li><a href="#">SHOP</a>
                     <ul>
@@ -173,18 +173,124 @@
 
 
             </ul>
-        </div> -->
+        </div> 
 
 
 
-        <!-- <div id="bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolore.</div> -->
-    </div> -->
+    <div id="bottom"> <marquee>
+        <label style="width:100% ; padding-right: 1400px;"> Free Samples with all orders</label>
+        <label id="secondmarq"> Due to high volume shipping times may be delayed</label>
+    
+    </marquee>
+    
+</div>
+    </div> 
 
 
     <div id="main_body">
-        <div id="slider1"></div>
+        <div id="slider1"> <img src="https://i.ibb.co/tcR7DYs/Screenshot-2022-10-02-at-11-44-54-AM.png" alt=""></div>
         <div>NEW ARRIVALS</div>
-        <div id="slider2"></div>
+        <div id="slider2">
+            <div class="carousel-container">
+            <div class="carousel-inner">
+              <div class="track">
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-color-deepalmond-814309023086-1_470x.jpg?v=1663805161" alt="" id="image1">
+                      </div>
+                    <div class="info"><h4>Lune+Aster</h4>
+                  <p>Dawn to Dusk Foundation Stick</p>
+              <p>$52</p>
+          </div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-005floz15ml-893689003826-1_470x.jpg?v=1663618246" alt="" id="image1"></div>
+                    <div class="info"><h4>Revitalash</h4>
+                      <p>Revitabrow advanced  conditioner</p>
+                  <p>$58-$118</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-633222211079-1_470x.jpg?v=1662557663" alt="" id="image1"></div>
+                    <div class="info"><h4>RéVive</h4>
+                      <p>Fermitif Neck Renewal Serum Firming Treatment</p>
+                  <p>$195</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-6treatments-633222213967-1_470x.jpg?v=1664208872" alt="" id="image1"></div>
+                    <div class="info"><h4>RéVive</h4>
+                      <p>Masque Des Yeux Instant De-Puffing Gel Eye Mask</p>
+                  <p>$28-$95</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-5060552904893-1_470x.jpg?v=1663862860" alt="" id="image1"></div>
+                    <div class="info"><h4>AUGUSTINUS BADER</h4>
+                      <p>The Neem Comb With Handle</p>
+                  <p>$28</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-810081492522-1_470x.jpg?v=1663939982" alt="" id="image1"></div>
+                    <div class="info"><h4>R+Co BLEU</h4>
+                      <p>F-Layer Deep Conditioning Serum</p>
+                  <p>$64</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-05floz15ml-840216931336-1_470x.jpg?v=1663618199" alt="" id="image1"></div>
+                    <div class="info"><h4>Living Proof</h4>
+                      <p>Triple Bond Complex</p>
+                  <p>$20-$45</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-17floz50ml-5060541430440-1_470x.jpg?v=1662538920" alt="" id="image1"></div>
+                    <div class="info"><h4>Sana Jardin</h4>
+                      <p>Tiger By Her Side Eau De Parfum</p>
+                  <p>$30-$225</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-814309023185-1_470x.jpg?v=1663993184" alt="" id="image1"></div>
+                    <div class="info"><h4>BLUEMERCURY</h4>
+                      <p>The Fall Makeup Edit</p>
+                  <p>$75</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-color-deep-810050680219-1_470x.jpg?v=1663939862" alt="" id="image1"></div>
+                    <div class="info"><h4>KEVYN AUCOIN</h4>
+                      <p>The Counter Eyeshadow Pallet</p>
+                  <p>$36</p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nav">
+              <button class="next">
+                <i class="material-icons">
+                >
+                </i>
+              </button>
+              <button class="prev">
+                <i class="material-icons">
+                <
+                </i>
+              </button>
+            </div>
+          </div></div>
         <div id="glowtime">
             <h1>GLOW TIME</h1>
             <p>Nourishing, ultra-hydrating formulas for limitless looks.</p>
@@ -196,8 +302,109 @@
             </div>
 
         </div>
+        <div>SCENTS OF THE SEASON</div>
 
-        <div id="slider3"></div>
+        <div id="slider3">
+            <div class="carousel-container">
+            <div class="carousel-inner">
+              <div class="track">
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-840732116392-1_470x.jpg?v=1663262838" alt="" id="image1">
+                      </div>
+                    <div class="info"><h4>Lune+Aster</h4>
+                  <p>Dawn to Dusk Foundation Stick</p>
+              <p>$52</p>
+          </div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-850023780126-1_470x.jpg?v=1663862894" alt="" id="image1"></div>
+                    <div class="info"><h4>Revitalash</h4>
+                      <p>Revitabrow advanced  conditioner</p>
+                  <p>$58-$118</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-727080240705-1_470x.jpg?v=1664392855" alt="" id="image1"></div>
+                    <div class="info"><h4>RéVive</h4>
+                      <p>Fermitif Neck Renewal Serum Firming Treatment</p>
+                  <p>$195</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-212oz600g-3700431440853-1_470x.jpg?v=1663003918" alt="" id="image1"></div>
+                    <div class="info"><h4>RéVive</h4>
+                      <p>Masque Des Yeux Instant De-Puffing Gel Eye Mask</p>
+                  <p>$28-$95</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-850032889322-v-20221002T044509Z-1_470x.jpg?v=1664687701" alt="" id="image1"></div>
+                    <div class="info"><h4>AUGUSTINUS BADER</h4>
+                      <p>The Neem Comb With Handle</p>
+                  <p>$28</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-840732117184-1_470x.jpg?v=1664463234" alt="" id="image1"></div>
+                    <div class="info"><h4>R+Co BLEU</h4>
+                      <p>F-Layer Deep Conditioning Serum</p>
+                  <p>$64</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-727080240804-1_470x.jpg?v=1664294796" alt="" id="image1"></div>
+                    <div class="info"><h4>Living Proof</h4>
+                      <p>Triple Bond Complex</p>
+                  <p>$20-$45</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-17floz50ml-5060541430440-1_470x.jpg?v=1662538920" alt="" id="image1"></div>
+                    <div class="info"><h4>Sana Jardin</h4>
+                      <p>Tiger By Her Side Eau De Parfum</p>
+                  <p>$30-$225</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-3700431400154-1_470x.jpg?v=1661861819" alt="" id="image1"></div>
+                    <div class="info"><h4>BLUEMERCURY</h4>
+                      <p>The Fall Makeup Edit</p>
+                  <p>$75</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-840732116408-1_470x.jpg?v=1663172353" alt="" id="image1"></div>
+                    <div class="info"><h4>KEVYN AUCOIN</h4>
+                      <p>The Counter Eyeshadow Pallet</p>
+                  <p>$36</p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nav">
+              <button class="next">
+                <i class="material-icons">
+                >
+                </i>
+              </button>
+              <button class="prev">
+                <i class="material-icons">
+                <
+                </i>
+              </button>
+            </div>
+          </div></div>
         <div id="haircare">
             <div><img
                     src="https://cdn.shopify.com/s/files/1/0283/0185/2747/files/Kevyn_Aucoin_SidebySide_1000x625_5f1bdb5a-963a-4c41-bd27-9477a719fe50_640x.jpg?v=1663768998"
@@ -218,8 +425,108 @@
             </div>
 
         </div>
-
-        <div id="slider4"></div>
+        <div>BEST SELLERS</div>
+        <div id="slider4">
+            <div class="carousel-container">
+            <div class="carousel-inner">
+              <div class="track">
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-814309023154-1_470x.jpg?v=1661976274" alt="" id="image1">
+                      </div>
+                    <div class="info"><h4>Lune+Aster</h4>
+                  <p>Dawn to Dusk Foundation Stick</p>
+              <p>$52</p>
+          </div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-885609030272-1_470x.jpg?v=1664294695" alt="" id="image1"></div>
+                    <div class="info"><h4>Revitalash</h4>
+                      <p>Revitabrow advanced  conditioner</p>
+                  <p>$58-$118</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-885609025421-1_470x.jpg?v=1662077337" alt="" id="image1"></div>
+                    <div class="info"><h4>RéVive</h4>
+                      <p>Fermitif Neck Renewal Serum Firming Treatment</p>
+                  <p>$195</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-635494263008-1_470x.jpg?v=1658873817" alt="" id="image1"></div>
+                    <div class="info"><h4>RéVive</h4>
+                      <p>Masque Des Yeux Instant De-Puffing Gel Eye Mask</p>
+                  <p>$28-$95</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-390205025008-1_470x.jpg?v=1663250198" alt="" id="image1"></div>
+                    <div class="info"><h4>AUGUSTINUS BADER</h4>
+                      <p>The Neem Comb With Handle</p>
+                  <p>$28</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-810081492522-1_470x.jpg?v=1663939982" alt="" id="image1"></div>
+                    <div class="info"><h4>R+Co BLEU</h4>
+                      <p>F-Layer Deep Conditioning Serum</p>
+                  <p>$64</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-05floz15ml-840216931336-1_470x.jpg?v=1663618199" alt="" id="image1"></div>
+                    <div class="info"><h4>Living Proof</h4>
+                      <p>Triple Bond Complex</p>
+                  <p>$20-$45</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-size-17floz50ml-5060541430440-1_470x.jpg?v=1662538920" alt="" id="image1"></div>
+                    <div class="info"><h4>Sana Jardin</h4>
+                      <p>Tiger By Her Side Eau De Parfum</p>
+                  <p>$30-$225</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/global_images-814309023185-1_470x.jpg?v=1663993184" alt="" id="image1"></div>
+                    <div class="info"><h4>BLUEMERCURY</h4>
+                      <p>The Fall Makeup Edit</p>
+                  <p>$75</p></div>
+                  </div>
+                </div>
+                <div class="card-container">
+                  <div class="card">
+                    <div class="img"><img src="https://cdn.shopify.com/s/files/1/0283/0185/2747/products/variant_images-color-deep-810050680219-1_470x.jpg?v=1663939862" alt="" id="image1"></div>
+                    <div class="info"><h4>KEVYN AUCOIN</h4>
+                      <p>The Counter Eyeshadow Pallet</p>
+                  <p>$36</p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="nav">
+              <button class="next">
+                <i class="material-icons">
+                >
+                </i>
+              </button>
+              <button class="prev">
+                <i class="material-icons">
+                <
+                </i>
+              </button>
+            </div>
+          </div></div>
 
         <div id="bleu">
             <h1>R+CO BLEU ESSENTIALS</h1>
@@ -274,4 +581,57 @@
    import {footer,navbar} from "./components/navbar.js";
 document.getElementById("footer").innerHTML = footer();
 document.getElementById("navbar").innerHTML = navbar();
+</script>
+
+<script>
+
+     image=["https://i.ibb.co/cwcLxBs/Screenshot-2022-10-02-at-12-40-12-PM.png",
+"https://i.ibb.co/9bkPGBt/Screenshot-2022-10-02-at-12-43-53-PM.png",
+" https://i.ibb.co/nLt6hVx/Screenshot-2022-10-02-at-12-44-08-PM.png",
+"https://i.ibb.co/gzXgHfg/Screenshot-2022-10-02-at-12-44-25-PM.png",
+"https://i.ibb.co/2yM5B8K/Screenshot-2022-10-02-at-12-44-44-PM.png",
+
+    ]
+   
+   
+    let id;
+
+
+    let i=0;//so that slide show will start at 
+
+    let slideshow=()=>{
+        let container=document.getElementById("slider1");
+
+        id= setInterval(()=>{
+            if(i===image.length){
+                i=0;
+            }
+            console.log(i)
+            let img=document.createElement("img");
+            img.src=image[i];
+            container.innerHTML=null;
+            container.append(img);
+            i++
+        },3000)
+    }
+
+    slideshow();
+
+
+
+    const carousels = document.querySelectorAll('.carousel-container');
+
+carousels.forEach(carousel => {
+  const width = carousel.offsetWidth + 15;
+  const track = carousel.querySelector('.track');
+  const prev = carousel.querySelector('.prev');
+  const next = carousel.querySelector('.next');
+  next.addEventListener('click', () => {
+    track.style.transform = `translateX(-${width}px)`;
+  });
+  prev.addEventListener('click', () => {
+    track.style.transform = `translateX(0)`;
+  });
+});
+
 </script>
