add loading image, cart number show on every button click

--- a/makeup.html
+++ b/makeup.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="navbar1.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body> 
     <div id="navbar"></div>
 <div id="gridout1">
     <div class="gridin11">
@@ -55,6 +55,7 @@
                 <option value="phtl">Price High to Low</option>
                 </select></span>
         </div>
+        <div id="spinner" style="display: none;"><img style="border-radius: 50%;margin: auto;" src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" alt="loading..."/></div>
         <div id="containershop"></div>
        
     </div>
