--- a/shop.html
+++ b/shop.html
@@ -57,6 +57,7 @@
                 <option value="phtl">Price High to Low</option>
                 </select></span>
         </div>
+        <div id="spinner" style="display: none;"><img style="border-radius: 50%;margin: auto;" src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" alt="loading..."/></div>
         <div id="containershop"></div>
        
     </div>
