update cart part product already in cart apply loading image change some css

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <ul>
                 <li><a href="#">SHOP</a>
                     <ul>
-                        <li><a href="#">SKIN CARE</a></li>
-                        <li><a href="#">MAKE UP</a></li>
+                        <li><a href="./shop.html">SKINN CARE</a></li>
+                        <li><a href="./makeup.html">MAKE UP</a></li>
                         <li><a href="#">HAIR</a></li>
                         <li><a href="#">BATH AND BODY</a></li>
                         <li><a href="#">FRAGRANCE</a></li>
